<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/uselessTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uselessString3"
                android:textAlignment="center"
                android:textColor="@color/darkBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/addNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:ems="10"
                android:hint="@string/nameData"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkGray"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/addAgeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:ems="10"
                android:hint="@string/ageData"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkGray"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/addHeightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:ems="10"
                android:hint="@string/heightData"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkGray"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/addWeighEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:ems="10"
                android:hint="@string/weightData"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkGray"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/uselessTextView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uselessString2"
                    android:textAlignment="textStart"
                    android:textColor="@color/darkGray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/addMaleGenderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maleData"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/addFeminineGenderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feminineData"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </RadioGroup>

            <EditText
                android:id="@+id/addMobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:ems="10"
                android:hint="@string/mobileData"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkGray"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/uselessTextView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uselessString4"
                android:textAlignment="center"
                android:textColor="@color/darkBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/fallSensibilityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fallSensibility"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/fallSensibilityBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/fallSensibilityValueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/percentValue"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/impactSensibilityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/impactSensibility"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/impactSensibilityBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/impactSensibilityValueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/percentValue"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/samplingRate"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/uiToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_button_selector"
                    android:checked="true"
                    android:textColor="@color/black"
                    android:textOff="@string/minimumSample"
                    android:textOn="@string/minimumSample"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/gameToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_button_selector"
                    android:textColor="@color/black"
                    android:textOff="@string/mediumSample"
                    android:textOn="@string/mediumSample"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/fastestToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_button_selector"
                    android:textColor="@color/black"
                    android:textOff="@string/maximumSample"
                    android:textOn="@string/maximumSample"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/saveSettingsButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveData"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/black" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>