<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".TrainingSelectionActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/laddersButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/training0"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/blueUnique"
                app:strokeWidth="3dp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/lieDownButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/training1"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/blueUnique"
                app:strokeWidth="3dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/walkButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/training2"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/blueUnique"
                app:strokeWidth="3dp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/runButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/training3"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/blueUnique"
                app:strokeWidth="3dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/jumpsButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/training4"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/blueUnique"
                app:strokeWidth="3dp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/sitDownButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/training5"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/blueUnique"
                app:strokeWidth="3dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/liftUpButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/training6"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/blueUnique"
                app:strokeWidth="3dp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/liftButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/training7"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/blueUnique"
                app:strokeWidth="3dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/continuousButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/training8"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/blueUnique"
                app:strokeWidth="3dp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/othersButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/training9"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:strokeColor="@color/blueUnique"
                app:strokeWidth="3dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/trainingBackButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeBack"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:strokeColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>