<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40sp"
            android:text="@string/userName"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/monitorActivityButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:text="@string/fallMonitoring"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:icon="@mipmap/emergency_contact_button"
            app:iconPadding="10dp"
            app:iconTint="#000"
            app:strokeColor="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/trainingDataButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:text="@string/trainingData"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:icon="@mipmap/training_button"
            app:iconPadding="10dp"
            app:iconTint="#000"
            app:strokeColor="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/settingButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:text="@string/configuration"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:icon="@mipmap/settings_button"
            app:iconPadding="10dp"
            app:iconTint="#000"
            app:strokeColor="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/signOutButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signOut"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:icon="@mipmap/sign_out_button"
            app:iconPadding="10dp"
            app:iconTint="#000"
            app:strokeColor="@color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>